# crypto-skills

./: .gitignore  README.md
.github/workflows/: deploy.yml
scripts/: extract-skills-data.mjs
skills/: download-report.json  manifest.json
skills/awesome-solana-ai/: README.md
skills/bankr-skills/: .gitignore  README.md  data.json  onchainkit.skill
skills/binance-skills-hub/: data.json
skills/bnbchain-skills/: LICENSE  README.md  data.json
skills/bowen-polymarket-agent-skills/: .gitignore  README.md  SKILL.md  data.json
skills/bybit-skills/: LICENSE  MANIFEST  README.md  SKILL.md  data.json
skills/byreal-agent-skills/: .gitignore  CLAUDE.md  README.md  data.json  package-lock.json  package.json  tsconfig.json
skills/cloddsbot-trading-polymarket/: data.json
skills/coinank-openapi-skill/: .gitignore  README.md  README_EN.md  SKILL.md  data.json
skills/coinbase-agentic-wallet-skills/: CONTRIBUTING.md  LICENSE.md  README.md  data.json  package.json
skills/crypto-agent-trading/: AGENTS.md  (+2 more)
skills/daily-news/: README.md  config.json  data.json  pyproject.toml
skills/daily-news/docs/: README_JA.md  README_KO.md  README_ZH.md
skills/daily-news/openclaw-skill/daily-news/: package.json
skills/daily-news/src/daily_news_mcp/: __init__.py  __main__.py  api_client.py  app.py  config.py  server.py  tools.py
skills/okx-onchainos-skills/cli/: Cargo.toml  build.rs
skills/okx-onchainos-skills/cli/.cargo/: config.toml
skills/okx-onchainos-skills/cli/src/: audit.rs  chains.rs  client.rs  config.rs  crypto.rs  file_keyring.rs  home.rs  keyring_store.rs  main.rs  output.rs  wallet_api.rs  wallet_store.rs
skills/okx-onchainos-skills/cli/src/commands/: gateway.rs  leaderboard.rs  market.rs  memepump.rs  mod.rs  portfolio.rs  security.rs  signal.rs  swap.rs  token.rs  tracker.rs  upgrade.rs  ws.rs
skills/okx-onchainos-skills/cli/src/commands/agentic_wallet/: account.rs  auth.rs  balance.rs  chain.rs  common.rs  history.rs  mod.rs  payment.rs  sign.rs  transfer.rs  wallet.rs
skills/okx-onchainos-skills/cli/src/commands/defi/: api.rs  helpers.rs  mod.rs  operations.rs
skills/okx-onchainos-skills/cli/src/doh/: binary.rs  cache.rs  manager.rs  mod.rs  types.rs
skills/okx-onchainos-skills/cli/src/mcp/: mod.rs
skills/okx-onchainos-skills/cli/src/watch/: daemon.rs  mod.rs  store.rs  types.rs
skills/okx-onchainos-skills/cli/tests/: cli_defi.rs  cli_gateway.rs  cli_leaderboard.rs  cli_market.rs  cli_portfolio.rs  cli_security.rs  cli_signal.rs  cli_swap.rs  cli_token.rs  cli_trenches.rs  mcp_server.rs
skills/okx-onchainos-skills/cli/tests/common/: mod.rs
(+761 files in other folders)
