[project]
name = "daily-news-mcp"
version = "0.1.0"
description = "MCP server for daily news and hot topics"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.25,<2",
    "httpx>=0.27",
]

[project.scripts]
daily-news-mcp = "daily_news_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/daily_news_mcp"]

[tool.uv]
dev-dependencies = []
